--- a/kava.cfg
+++ b/kava.cfg
@@ -39,7 +39,7 @@ bind y		"weapon 13; cg_drawgun 2; cg_fov 100"		// chaingun
 
 
 bind F12 		"exec maldul.cfg; vid_restart"
-bind F11		"exec ui/shug_1,0.cfg"
+bind F11		"exec ui/fat.cfg"
 bind F1 		"vote yes"
 bind F2 		"vote no"
 bind F3 		"readyup"
