--- a/kava.cfg
+++ b/kava.cfg
@@ -38,8 +38,8 @@ bind y		"weapon 13; cg_drawgun 2; cg_fov 100"		// chaingun
 //_________________________________________________________________________________________________________   
 
 
-bind F12 		"exec maldul.cfg; vid_restart"
-bind F11		"exec ui/fat.cfg"
+bind F12 		"exec kava.cfg; vid_restart"
+#bind F11		""
 bind F1 		"vote yes"
 bind F2 		"vote no"
 bind F3 		"readyup"
@@ -119,7 +119,7 @@ seta com_allowConsole 		"1"
 seta cl_allowConsoleChat 		"1"
 seta cg_enableRespawnTimer		"1"
 seta cg_drawItemPickups		"7"
-seta cg_hudfiles 			"ui/shug_1,0.cfg"		//Hud setting, but I use autoexec.cfg instead for initialization
+seta cg_hudfiles 			"ui/poo.cfg"		//Hud setting, but I use autoexec.cfg instead for initialization
 seta cg_zoomfov 			"90"
 seta cg_drawGun 			"2"
 seta cg_forceTeamModel 		"sarge/default"
