New bind - god - give all

--- a/kava.cfg
+++ b/kava.cfg
@@ -53,6 +53,7 @@ bind k		"kill"
 bind ENTER		"messagemode"
 bind l		"messagemode5"
 bind v		"+button3"
+bind KP_MINUS		"god; give all"
 
 // Accuracy toggle
 bind . "vstr acctog"
@@ -119,7 +120,7 @@ seta com_allowConsole 		"1"
 seta cl_allowConsoleChat 		"1"
 seta cg_enableRespawnTimer		"1"
 seta cg_drawItemPickups		"7"
-seta cg_hudfiles 			"ui/poo.cfg"		//Hud setting, but I use autoexec.cfg instead for initialization
+seta cg_hudfiles 			"ui/hudz.cfg"		//Hud setting, but I use autoexec.cfg instead for initialization
 seta cg_zoomfov 			"90"
 seta cg_drawGun 			"2"
 seta cg_forceTeamModel 		"sarge/default"
