--- a/kava.cfg
+++ b/kava.cfg
@@ -1,4 +1,4 @@
-// kava's QL config - last change made: 29.7.14 13:12.
+// kava's QL config - last change made: August the 4th, 2014, 09:35
 
 unbindall
 in_restart
@@ -29,7 +29,7 @@ bind f           "weapon 3; cg_drawgun 2; cg_fov 100"  // shotgun
 bind MWHEELDOWN  "weapon 4; cg_drawgun 2; cg_fov 100"  // grenade launcher
 bind e           "weapon 5;cg_drawgun 2; cg_fov 100"   // rocket launcher
 bind MWHEELUP    "weapon 6; cg_drawgun 2; cg_fov 100"  // lightning gun
-bind q           "weapon 7; cg_drawgun 0 ;cg_fov 100"  // railgun
+bind q           "weapon 7; cg_drawgun 0;cg_fov 100"  // railgun
 bind ALT         "weapon 8; cg_drawgun 2; cg_fov 100"  // plasmagun
 bind t           "weapon 9; cg_drawgun 2; cg_fov 100"  // bfg
 bind g           "weapon 11; cg_drawgun 2; cg_fov 100" // nailgun
