Added Heavy Machinegun to binds, added net_restart bind. OC tweaks.

--- a/kava.cfg
+++ b/kava.cfg
@@ -1,4 +1,4 @@
-// kava's QL config - last change made: August the 4th, 2014, 09:35
+// kava's QL config - last change made: April the 22nd, 2015, 14:21
 
 unbindall
 in_restart
@@ -29,13 +29,13 @@ bind f           "weapon 3; cg_drawgun 2; cg_fov 100"  // shotgun
 bind MWHEELDOWN  "weapon 4; cg_drawgun 2; cg_fov 100"  // grenade launcher
 bind e           "weapon 5;cg_drawgun 2; cg_fov 100"   // rocket launcher
 bind MWHEELUP    "weapon 6; cg_drawgun 2; cg_fov 100"  // lightning gun
-bind q           "weapon 7; cg_drawgun 0;cg_fov 100"  // railgun
+bind q           "weapon 7; cg_drawgun 0;cg_fov 100"   // railgun
 bind ALT         "weapon 8; cg_drawgun 2; cg_fov 100"  // plasmagun
 bind t           "weapon 9; cg_drawgun 2; cg_fov 100"  // bfg
 bind g           "weapon 11; cg_drawgun 2; cg_fov 100" // nailgun
 bind h           "weapon 12; cg_drawgun 2; cg_fov 100" // proximity mines
 bind y           "weapon 13; cg_drawgun 2; cg_fov 100" // chaingun
-
+bind 1           "weapon 14; cg_drawgun 2; cg_fov 100" // heavy machinegun
 
 // Bindings
 //_____________________________________________________________________________
@@ -48,7 +48,7 @@ bind F3        "readyup"
 bind F4        "screenshotJPEG"
 bind F7        "record"
 bind F8        "stoprecord"
-bind F10       "quit"
+bind F10       "ragequit"
 bind p         "messagemode2"
 bind i         "+chat"
 bind k         "kill"
@@ -56,6 +56,7 @@ bind ENTER     "messagemode"
 bind l         "messagemode5"
 bind v         "+button3"
 bind KP_MINUS  "god; give all"
+bind KP_PLUS   "net_restart"
 
 
 // Accuracy toggle
