--- a/kava.cfg
+++ b/kava.cfg
@@ -133,8 +133,11 @@ seta cg_drawItemPickups      "7"
 seta cg_hudfiles             "ui/hudz.cfg"
 seta cg_zoomfov              "90"
 seta cg_drawGun              "2"
+seta cg_announcer            "3"
 seta cg_forceTeamModel       "doom/default"
 seta cg_forceEnemyModel      "tankjr/bright"
+seta setenemycolor           "hha"
+seta setteamcolor            "y"
 seta model                   "doom/default"
 seta com_blood               "0"
 seta bot_nochat              "1"
