Fix setenemycolor/setteamcolor commands. Treat as commands instead of cvar.

--- a/kava.cfg
+++ b/kava.cfg
@@ -2,6 +2,8 @@
 
 unbindall
 in_restart
+setenemycolor hha
+setteamcolor y
 
 
 // Movement
@@ -136,8 +138,6 @@ seta cg_drawGun              "2"
 seta cg_announcer            "3"
 seta cg_forceTeamModel       "doom/default"
 seta cg_forceEnemyModel      "tankjr/bright"
-seta setenemycolor           "hha"
-seta setteamcolor            "y"
 seta model                   "doom/default"
 seta com_blood               "0"
 seta bot_nochat              "1"
