Remove nickname from config :)

--- a/player.cfg
+++ b/player.cfg
@@ -1,4 +1,4 @@
-// kava's QL config - last change made: April the 27nd, 2015, 12:21
+// tsaulic's QL config - last change made: April the 27nd, 2015, 12:21
 
 unbindall
 in_restart
