--- a/player.cfg
+++ b/player.cfg
@@ -27,7 +27,7 @@ bind SHIFT       "weapon 1; cg_drawgun 2; cg_fov 100"  // pummel
 bind r           "weapon 2; cg_drawgun 2; cg_fov 100"  // machine gun
 bind f           "weapon 3; cg_drawgun 2; cg_fov 100"  // shotgun
 bind MWHEELDOWN  "weapon 4; cg_drawgun 2; cg_fov 100"  // grenade launcher
-bind e           "weapon 5;cg_drawgun 2; cg_fov 100"   // rocket launcher
+bind e           "weapon 5; cg_drawgun 2; cg_fov 100"   // rocket launcher
 bind MWHEELUP    "weapon 6; cg_drawgun 2; cg_fov 100"  // lightning gun
 bind q           "weapon 7; cg_drawgun 0;cg_fov 100"   // railgun
 bind ALT         "weapon 8; cg_drawgun 2; cg_fov 100"  // plasmagun
@@ -40,7 +40,7 @@ bind 1           "weapon 14; cg_drawgun 2; cg_fov 100" // heavy machinegun
 // Bindings
 //_____________________________________________________________________________
 
-bind F12       "exec kava.cfg; vid_restart"
+bind F12       "exec player.cfg; vid_restart"
 #bind F11      ""
 bind F1        "vote yes"
 bind F2        "vote no"
