--- a/player.cfg
+++ b/player.cfg
@@ -1,4 +1,4 @@
-// tsaulic's QL config - last change made: August the 31st, 2018, 18:21
+// tsaulic's QL config - last change made: May the 20th, 2022
 
 unbindall
 in_restart
@@ -41,7 +41,7 @@ bind 1           "weapon 14; cg_drawgun 2; cg_fov 100" // heavy machinegun
 //_____________________________________________________________________________
 
 bind F12       "exec player.cfg; vid_restart"
-#bind F11      ""
+//bind F11      ""
 bind F1        "vote yes"
 bind F2        "vote no"
 bind F3        "readyup"
@@ -73,7 +73,7 @@ set accoff  "-acc; set acctog vstr accon"
 
 bind 0         "say_team wd"
 bind 4         "say ^7 :)"
-bind 6         "say ^7WOROLOL"
+bind 6         "say ^7ehehehe"
 bind 8         "say ^7 x("
 bind KP_ENTER  "in_restart"
 
@@ -90,7 +90,7 @@ bind F6      "say_team RA here!"
 //_____________________________________________________________________________
 
 seta rate              "25000"
-seta cl_maxpackets     "125"
+//seta cl_maxpackets     "125"
 seta r_displayRefresh  "120"
 seta com_maxfps        "125"
 seta cl_timenudge      "0"
@@ -116,7 +116,7 @@ seta cg_predictLocalRailShots  "1"
 //_____________________________________________________________________________
 
 seta in_mouse       "2"
-seta sensitivity    "1.64"
+seta sensitivity    "3"
 seta m_filter       "1"
 seta m_pitch        "0.022"
 seta m_yaw          "0.022"
